--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Portfolio</title>
-    </head>
-    <body>
-        <div id="root"></div>
-        <script type="module" src="/src/App.jsx"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio</title>
+  </head>
+  <body>
+    <div id="root"></div> <!-- React akan merender komponen ke dalam elemen ini -->
+    <script type="module" src="/src/index.jsx"></script> <!-- Pastikan path ke index.jsx benar -->
+  </body>
 </html>
