--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.waves.min.js"></script>
   </head>
   <body>
-    <div id="root"></div> <!-- React akan merender komponen ke dalam elemen ini -->
-    <script type="module" src="/src/index.jsx"></script> <!-- Pastikan path ke index.jsx benar -->
+    <div id="root"></div>
+    <script type="module" src="/src/index.jsx"></script> 
   </body>
 </html>
